package storage;

import logic.Event;
import java.util.List;

public class StorageManager {

    public void saveEventToFile(Event event, String filePath) {

    }

    public Event loadEventFromFile(String filePath) {
        return null;
    }

    public List<String> listSavedEvents() {
        return null;
    }
}
